k3s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitterclone-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitterclone-backend
  template:
    metadata:
      labels:
        app: twitterclone-backend
    spec:
      containers:
        - name: twitterclone-backend
          image: jeanmichelbb/twc-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: twitterclone-backend
spec:
  selector:
    app: twitterclone-backend
  ports:
    - port: 8000
      targetPort: 8000
