k3s/ingress.yaml
# Ingress — public via Cloudflare
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twitterclone-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: twitterclone.sacenpapier.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twitterclone-frontend
                port:
                  number: 3000
    - host: twittercloneapi.sacenpapier.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twitterclone-backend
                port:
                  number: 8000
